--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "boockit",
-  "private": true,
-  "version": "0.0.0",
+  "name": "plataforma-smartbook",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "cross-env NODE_ENV=development vite",
+    "log-env": "node -e \"console.log('NODE_ENV:', process.env.NODE_ENV);\"",
+    "build": "cross-env NODE_ENV=production vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm run build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "cross-env": "^7.0.3",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.7",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "vite": "^5.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
